--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: android
 jdk: oraclejdk8
+
 android:
   components:
+    - platform-tools
+    - tools
     - build-tools-25.0.0
     - android-25
-    - extra
+    - extra-android-m2repository
+
+script: ./gradlew assembleRelease
 
