--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ jdk: oraclejdk8
 
 android:
   components:
-    - platform-tools
     - tools
+    - tools
+    - platform-tools
     - build-tools-25.0.0
     - android-25
     - extra-android-m2repository
