--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.0.5'
+    ext.kotlin_version = '1.0.5-2'
     repositories {
         jcenter()
     }
@@ -19,11 +19,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.ridibooks'
-version = '1.0.9'
+version = '1.0.10'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.1'
 
     defaultConfig {
         minSdkVersion 15
@@ -40,7 +40,7 @@ android {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.android.support:support-compat:25.0.0'
+    compile 'com.android.support:support-compat:25.0.1'
     compile 'com.google.code.gson:gson:2.7'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
     compile 'org.apache.commons:commons-compress:1.12'
