--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
     }
 }
 
@@ -44,6 +45,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
     compile 'org.apache.commons:commons-compress:1.12'
+    testCompile 'junit:junit:4.12'
 }
 
 task sourcesJar(type: Jar) {
