--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.1'
+    ext.kotlin_version = '1.1.2-5'
     repositories {
         jcenter()
     }
@@ -27,7 +27,7 @@ android {
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName version
         consumerProguardFiles 'proguard-rules.pro'
@@ -41,7 +41,7 @@ android {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.android.support:support-compat:25.2.0'
+    compile 'com.android.support:support-compat:25.3.1'
     compile 'com.google.code.gson:gson:2.7'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
     compile 'org.apache.commons:commons-compress:1.12'
