--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ buildscript {
     ext.kotlin_version = '1.1.51'
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
@@ -12,6 +13,7 @@ buildscript {
 
 repositories {
     jcenter()
+    google()
 }
 
 apply plugin: 'com.android.library'
@@ -22,8 +24,8 @@ group = 'com.github.ridibooks'
 version = '1.1.1'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 16
@@ -40,12 +42,12 @@ android {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.android.support:support-compat:25.3.1'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    compile 'org.apache.commons:commons-compress:1.12'
-    testCompile 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.android.support:support-compat:26.1.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    implementation 'org.apache.commons:commons-compress:1.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 task sourcesJar(type: Jar) {
