--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.ridibooks'
-version = '1.1.2'
+version = '1.1.3'
 
 android {
     compileSdkVersion 26
@@ -42,11 +42,11 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.android.support:support-compat:26.1.0'
-    implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    implementation 'org.apache.commons:commons-compress:1.12'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.android.support:support-compat:26.1.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    compile 'org.apache.commons:commons-compress:1.12'
     testImplementation 'junit:junit:4.12'
 }
 
