Apply `ktlint` - Closes #10

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.iml
-.gradle
-/local.properties
-/.idea
 .DS_Store
-/build
+.gradle
+.idea/*
+!.idea/codeStyles
+!.idea/inspectionProfiles
+build/
+local.properties
