--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,10 @@ android {
     }
 }
 
+configurations {
+    ktlint
+}
+
 dependencies {
     implementation 'com.android.support:support-compat:26.1.0'
     implementation 'com.android.support:support-fragment:26.1.0'
@@ -49,6 +53,8 @@ dependencies {
     implementation 'org.apache.commons:commons-compress:1.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation 'junit:junit:4.12'
+
+    ktlint 'com.github.shyiko:ktlint:0.22.0'
 }
 
 task sourcesJar(type: Jar) {
@@ -58,4 +64,22 @@ task sourcesJar(type: Jar) {
 
 artifacts {
     archives sourcesJar
+}
+
+task ktlint(type: JavaExec, group: 'verification') {
+    description = 'Check Kotlin code style.'
+    classpath = configurations.ktlint
+    main = 'com.github.shyiko.ktlint.Main'
+    args 'src/**/*.kt'
+}
+
+afterEvaluate { project ->
+    check.dependsOn ktlint
+}
+
+task ktlintFormat(type: JavaExec, group: 'formatting') {
+    description = 'Fix Kotlin code style deviations.'
+    classpath = configurations.ktlint
+    main = 'com.github.shyiko.ktlint.Main'
+    args '-F', 'src/**/*.kt'
 }
