--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest package="com.ridi.books.helper" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.ridi.books.helper">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+</manifest>
