Update .gitignore and remove `.idea/codeStyles`, `.idea/inspectionProfiles`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 *.iml
 .DS_Store
 .gradle
-.idea/*
-!.idea/codeStyles
-!.idea/inspectionProfiles
-build/
-local.properties
+/.idea
+/local.properties
+build
