--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 repositories {
     jcenter()
     google()
+    maven { url 'https://jitpack.io' }
 }
 
 apply plugin: 'com.android.library'
@@ -54,7 +55,8 @@ dependencies {
     compile 'org.apache.commons:commons-compress:1.12'
     testImplementation 'junit:junit:4.12'
 
-    ktlint 'com.github.shyiko:ktlint:0.22.0'
+    ktlint 'com.github.shyiko:ktlint:0.24.0'
+    ktlint 'com.github.ridi:ktlint-ruleset:master-SNAPSHOT'
 }
 
 task sourcesJar(type: Jar) {
