--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,10 @@ android:
     - tools
     - tools
     - platform-tools
-    - build-tools-26.0.3
-    - android-26
+    - build-tools-27.0.3
+    - android-27
 
-script:
-  - ./gradlew ktlint
-  - ./gradlew test
+script: ./gradlew check
 
 notifications:
   email: false
