--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ configurations {
 }
 
 dependencies {
-    compileOnly 'com.android.support:support-fragment:28.0.0'
+    compileOnly 'androidx.fragment:fragment:1.0.0'
 
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
