--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.ridi'
-version = '1.3.0'
+version = '1.3.1'
 
 android {
     compileSdkVersion 28
@@ -84,4 +84,18 @@ task ktlintFormat(type: JavaExec, group: 'formatting') {
     classpath = configurations.ktlint
     main = 'com.github.shyiko.ktlint.Main'
     args '-F', 'src/**/*.kt'
+}
+
+install {
+    repositories.mavenInstaller {
+        pom.project {
+            licenses {
+                license {
+                    name 'The MIT License'
+                    url 'https://opensource.org/licenses/MIT'
+                    distribution 'repo'
+                }
+            }
+        }
+    }
 }
