--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.4.0'
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
@@ -26,8 +26,8 @@ group = 'com.github.ridi'
 version = '1.5.1'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.3'
 
     defaultConfig {
         minSdkVersion 16
@@ -50,16 +50,16 @@ configurations {
 }
 
 dependencies {
-    compileOnly 'androidx.fragment:fragment:1.0.0'
+    compileOnly 'androidx.fragment:fragment:1.2.5'
 
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    implementation 'org.apache.commons:commons-compress:1.12'
+    implementation 'org.apache.commons:commons-compress:1.20'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
 
-    ktlint 'com.github.shyiko:ktlint:0.29.0'
+    ktlint 'com.pinterest:ktlint:0.34.2'
     ktlint 'com.github.ridi:ktlint-ruleset:master-SNAPSHOT'
 }
 
@@ -75,7 +75,7 @@ artifacts {
 task ktlint(type: JavaExec, group: 'verification') {
     description = 'Check Kotlin code style.'
     classpath = configurations.ktlint
-    main = 'com.github.shyiko.ktlint.Main'
+    main = 'com.pinterest.ktlint.Main'
     args 'src/**/*.kt'
 }
 
@@ -86,7 +86,7 @@ afterEvaluate { project ->
 task ktlintFormat(type: JavaExec, group: 'formatting') {
     description = 'Fix Kotlin code style deviations.'
     classpath = configurations.ktlint
-    main = 'com.github.shyiko.ktlint.Main'
+    main = 'com.pinterest.ktlint.Main'
     args '-F', 'src/**/*.kt'
 }
 
