--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    implementation 'org.apache.commons:commons-compress:1.20'
+    // compress 1.13+ requires API 26+ (java.nio.file) in order to use ZipFile
+    implementation 'org.apache.commons:commons-compress:1.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     testImplementation 'junit:junit:4.13'
