--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.4.21'
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
@@ -23,7 +23,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.ridi'
-version = '1.5.2'
+version = '1.5.3'
 
 android {
     compileSdkVersion 29
@@ -50,7 +50,7 @@ configurations {
 }
 
 dependencies {
-    compileOnly 'androidx.fragment:fragment:1.2.5'
+    compileOnly 'androidx.fragment:fragment-ktx:1.2.5'
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
