--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext.kotlin_version = '1.4.32'
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
     dependencies {
@@ -12,7 +12,7 @@ buildscript {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
     google()
     maven { url 'https://jitpack.io' }
 }
